sample-app/k8s/services/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-frontend
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: sample-app
    role: frontend
