sample-app/k8s/services/lb_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app
spec:
  backend:
    serviceName: sample-app-frontend
    servicePort: 80
